--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
 
 
-    <!--ABOUT ME-->
+    <!--ABOUT ME & SERVICES-->
     <section class="about-me" id="me">
         <h2 class="section__title section__title--services">What I do</h2>
         <!--SERVICES-->
