--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="#home" class="nav__link">Introductio & Home</a></li>
-                <li class="nav__item"><a href="#me" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="#home" class="nav__link">Introduction</a></li>
+                <li class="nav__item"><a href="#me" class="nav__link">What I do</a></li>
                 <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
             Wow, a <strong>visitor</strong>! Take a tour of my page :)
         </h1>
         <p class="section__subtitle section__subtitle--intro">
-            I am Mike, a front-end developer student and enthusiast
+            I am Mike, a front-end developer student & enthusiast
         </p>
         <img src="https://images.pexels.com/photos/1982485/pexels-photo-1982485.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
             alt="an image of a donut made by Dominika Roseclay on pexels, a stock photo site"
@@ -109,7 +109,7 @@
     <!--PORTFOLIO-->
     <section class="my-portfolio" id="portfolio-id">
         <h2 class="section__title section__title--portfolio">My Portfolio</h2>
-        <p class="section__subtitle section__subtitle--portfolio"></p>
+        <p class="section__subtitle section__subtitle--portfolio">Interesting projects I have worked on.</p>
         <img src="https://images.pexels.com/photos/270557/pexels-photo-270557.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
             alt="a photo of a monitor displaying code made by Pixabay on pexels, a stock photo site."
             class="portfolio-background">
@@ -130,8 +130,8 @@
 
             <!--Portfolio item number 3-->
             <a href="#" class="portfolio-body__item">
-                <img src="https://images.pexels.com/photos/1436141/pexels-photo-1436141.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                    alt="an image of audio mixing by Benjamin Lehman on pexels, a stock photo site"
+                <img src="https://images.pexels.com/photos/1181271/pexels-photo-1181271.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                    alt="an image of a Mac by Christina Morillo on pexels, a stock photo site"
                     class="portfolio__img">
             </a>
 
@@ -141,14 +141,19 @@
     </section>
 
     <!--FOOTER-->
-    <footer>
+    <footer class = "footer">
         <!--add actual email later-->
         <a href="mailto:address@email.com" class="footer__link">hello@Mike-ops</a>
         <ul class="contact-info">
-            <li class="contact-info__item"><a class="contact-info__link" href="https://duckduckgo.com">Github</a></li>
-            <li class="contact-info__item"><a class="contact-info__link" href="https://duckduckgo.com">Stack
-                    Overflow</a></li>
-            <li class="contact-info__item"><a class="contact-info__link" href="https://duckduckgo.com">12345</a></li>
+            <li class="contact-info__item"><a class="contact-info__link" href="https://duckduckgo.com">
+                Github</a>
+            </li>
+            <li class="contact-info__item"><a class="contact-info__link" href="https://duckduckgo.com">
+                StackOverflow</a>
+            </li>
+            <li class="contact-info__item"><a class="contact-info__link" href="https://duckduckgo.com">
+                12345</a>
+            </li>
         </ul>
     </footer>
 
