--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Introduction</a></li>
                 <li class="nav__item"><a href="#me" class="nav__link">What I do</a></li>
-                <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
+                <li class="nav__item"><a href="#portfolio-id" class="nav__link">Portfolio</a></li>
             </ul>
         </nav>
     </header>
