--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="intro" id="intro_id">
         <h1>Wow, a visitor! Take a tour of my page</h1>
-        <p class="intro_p">I'm Mike, a student and enthusiastic developer</p>
+        <p class="intro_p">Hi I'm Mike! A student and enthusiastic developer</p>
         <div class="donut_container"> <!--if this breaks, look into the "spans"-->
             <img src="https://images.pexels.com/photos/1982485/pexels-photo-1982485.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
             alt="an image of a donut made by Dominika Roseclay on pexels, a stock photo site">
@@ -90,7 +90,7 @@
     <!--END CARD-->
 
     <footer>
-        <a href="#">Github</a>
+        <a href="https://github.com/Mike-ops273">Mike-ops-273 Github</a>
     </footer>
 
     <script src="script.js"></script>
