--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
 
         <!--<section class="layout">-->
         <div class ="portfolio_display">
-            <a href="#" class ="portfolio_link">
-                <img src="https://images.pexels.com/photos/2398356/pexels-photo-2398356.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                alt="a photo of a collection of movies by Lucas Pezeta on pexels" class="portfolio__img">
+            <a href=" https://mike-ops273.github.io/greeting_app/" class ="portfolio_link">
+                <img src="https://images.pexels.com/photos/954599/pexels-photo-954599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                alt="Hello photo by Maria Tyutina on pexels" class="portfolio__img">
             </a>
             <a href="#" class ="portfolio_link">
-                <img src="https://images.pexels.com/photos/3861458/pexels-photo-3861458.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                alt="an image of a woman playing VR by ThisIsEngineering on pexels, a stock photo site"
+                <img src="https://images.pexels.com/photos/2398356/pexels-photo-2398356.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                alt="image of a person playing VR by ThisIsEngineering on pexels"
                 class="portfolio__img">
             </a>
             <a href="#" class ="portfolio_link">
                 <img src="https://images.pexels.com/photos/1181271/pexels-photo-1181271.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                alt="an image of a Mac by Christina Morillo on pexels, a stock photo site"
+                alt="an image of a Mac by Christina Morillo on pexels"
                 class="portfolio__img">
             </a>
         </div>
@@ -95,4 +95,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
